# InsiderTrader

./: .buildinfo  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.md  Makefile  README.html  README.md  check_version.py  environment.yml  genindex.html  objects.inv  pyproject.toml  search.html  searchindex.js  setup.cfg
.github/workflows/: ci.yml  code_formating.yaml  gh-pages.yml  python-package.yml  release-drafter.yml  release.yml  versioning.yml
_sources/: README.md
_sources/notebooks/: world-bank-api.ipynb
data/insider_data/: A.csv  AAP.csv  AAPL.csv  ABBV.csv  ABC.csv  ABMD.csv  ABT.csv  ACN.csv  ADBE.csv  ADI.csv  ADM.csv  ADP.csv  ADSK.csv  AEE.csv  AEP.csv  AES.csv  AFL.csv  AIG.csv  AIZ.csv  AJG.csv  AKAM.csv  ALB.csv  ALGN.csv  ALK.csv  ALL.csv  ALLE.csv  AMAT.csv  AMCR.csv  AMD.csv  AME.csv  AMGN.csv  AMP.csv  AMT.csv  AMZN.csv  ANET.csv  ANSS.csv  ANTM.csv  AON.csv  AOS.csv  APA.csv  (+454 more)
data/sp500-stock-prices/: A.csv  AAL.csv  AAP.csv  AAPL.csv  ABBV.csv  ABC.csv  ABMD.csv  ABT.csv  ACN.csv  ADBE.csv  ADI.csv  ADM.csv  ADP.csv  ADSK.csv  AEE.csv  AEP.csv  AES.csv  AFL.csv  AIG.csv  AIZ.csv  AJG.csv  AKAM.csv  ALB.csv  ALGN.csv  ALK.csv  ALL.csv  ALLE.csv  AMAT.csv  AMCR.csv  AMD.csv  AME.csv  AMGN.csv  AMP.csv  AMT.csv  AMZN.csv  ANET.csv  ANSS.csv  AON.csv  AOS.csv  APA.csv  (+463 more)
docs/: _config.yml  _toc.yml  requirements.txt
notebooks/: Insider_trading_analysis.html  Insider_trading_analysis.ipynb  world-bank-api.html  world-bank-package.html  world-bank-package.ipynb
src/datalab/: eda_base.py  indicators.py
src/insider_eda/: MANIFEST.in  eda_base.py
tests/: test_eda_base.py
