[tool.poetry]
name = "insidertrader"
version = "0.1.1"
description = "A tool for insider trading analysis."
authors = ["Tuhin Mallick <contact@tuhinmallick.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/tuhinmallick/InsiderTrader"
repository = "https://github.com/tuhinmallick/InsiderTrader"
keywords = ["trading", "finance", "insider trading"]
categories = ["Category :: Financial :: Investment"]

[tool.poetry.dependencies]
python = "^3.10"
brotlipy = "0.7.0"
cffi = "1.15.1"
cryptography = "38.0.4"
idna = "3.4"
libffi = "3.4.2"
requests = "2.28.1"
ruamel.yaml = "0.17.21"
ruamel.yaml.clib = "0.2.6"
setuptools = "65.6.3"
toolz = "0.12.0"
tqdm = "4.64.1"
tzdata = "2022g"
urllib3 = "1.26.14"
zstandard = "0.18.0"

[tool.poetry.dev-dependencies]
flake8 = "^4.0"
pytest = "^7.0"
pycparser = "2.21"
pyopenssl = "22.0.0"
wheel = "0.37.1"

[tool.black]
line-length = 100
target-version = ['py310']
skip-string-normalization = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
