[metadata]
name = InsiderTrader
author = Tuhin Mallick
author_email = tuhin.mllk@gmail.com
maintainer = Tuhin Mallick
maintainer_email = tuhin.mllk@gmail.com
version = 0.1.0
description = An Python package for insider trading analysis
long_description = file: README.md, LICENSE
keywords = Insider trading
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: MIT
    Operating System :: OS Independent

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    requests>=2.28.1
    pycountry>=22.3.5

[options.packages.find]
where=src
