[metadata]
name = InsiderTrader
author = Tuhin Mallick
author_email = tuhin.mllk@gmail.com
maintainer = Tuhin Mallick
maintainer_email = tuhin.mllk@gmail.com
version = 0.1.0
description = An Python package for insider trading analysis
long_description = file: README.md, LICENSE
keywords = Insider trading
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: MIT
    Operating System :: OS Independent

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    matplotlib==3.6.2
    numpy==1.24.0
    pandas==1.5.2
    plotly==5.11.0
    seaborn==0.12.2
    statsmodels==0.13.5


[options.packages.find]
where=src
